[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/inventory.gd" type="Script" id=1]
[ext_resource path="res://Scenes/user_interface/full_inventory_dialogue_en.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/user_interface/choose_item_dialogue_en.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/user_interface/item_list_4_item_en.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/user_interface/item_list_2_item_en.tscn" type="PackedScene" id=6]

[node name="inventory" type="Popup"]
pause_mode = 2
margin_right = 256.0
margin_bottom = 192.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="item_list_2_item" parent="." instance=ExtResource( 6 )]

[node name="item_list_4_item" parent="." instance=ExtResource( 5 )]
visible = false

[node name="choose_item_dialogue" parent="." instance=ExtResource( 3 )]

[node name="full_inventory_dialogue" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="popup_hide" from="." to="." method="_on_inventory_popup_hide"]

[editable path="full_inventory_dialogue"]
